@@ -1,3 +1,8 @@
+2008-05-18  Ulrich Mueller  <ulm@gentoo.org>
+
+	* elisp-common.eclass (elisp-site-regen): Create file for
+	backwards compatibility only if obsolete files were found.
+
 2008-03-28  Ulrich Mueller  <ulm@gentoo.org>
 
 	* elisp-common.eclass (elisp-site-regen): Check if the SITELISP
